--- a/DjangoProjects/DjangoORMs/courses_assign/apps/courses/templates/courses/destroy.html
+++ b/DjangoProjects/DjangoORMs/courses_assign/apps/courses/templates/courses/destroy.html
@@ -15,11 +15,15 @@
         <div class="container">
             <h2>Are you sure you want to delete the following course?</h2>
             <ul>
-              <li>Name: {{course.name}}</li>
-              <li>Description: {{ content.desc }}</li>
+              <li>Name: {{d.course.name}}</li>
+              <li>Description: {{ d.desc }}</li>
             </ul>
-            <input type="submit" name="no" value="No">
-            <input type="submit" name="delete" value="Yes! I want to delete this">
+            <form action="/delete/{{d.course_id}}", method='post'>
+              {% csrf_token %}
+               <input type="submit" name="delete" value="Yes! I want to delete this">
+              
+            </form>
+            <a href="/"><input type="submit" name="no" value="No"></a>
         </div>  
  </body>
  </html>
