--- a/DjangoProjects/DjangoORMs/login_registration/apps/the_wall/templates/the_wall/mainpage.html
+++ b/DjangoProjects/DjangoORMs/login_registration/apps/the_wall/templates/the_wall/mainpage.html
@@ -8,42 +8,58 @@
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	  <title>My wall~~</title>
+	  {% load static %}
+	<link rel="stylesheet" href="{% static 'the_wall/css/style.css' %}">
 </head>
 <body>
-		<div id="container">
-			<div id="header">
-				<h2>My Wall</h2>
-				<div id="side-head">
-					<p style="display: inline; margin-right:5px;">Welcome {{ request.session.first_name}}</p>
+		<div class="container">
+			<div class="header">
+				<h2>Coding Dojo Wall</h2>
+				<div class="side-head">
+					<p style="display: inline; margin-right:5px; margin-top:10px;">Welcome {{ request.session.first_name}}</p>
 					<a href="/" style="display: inline;">logout</a>
 				</div>
 			</div>
-			<div id="body">
-				<div id="display-wall">
-					<h4 style="display:inline-block;">{{msg_count}} Messages for you {{request.session.first_name}}</h4>
-						
-						{% for friend in myfriends %}
-						<div id="msg-box">
-							<h3>{{ friend['first_name'] }} {{ friend['created_at'] }}</h3>
-							<p>{{ friend['content'] }} </p>
-							<a style="display:inline-block;" href="/delete/{{ friend['m_id'] }}"><img style="height:20px; width:20px; display: inline-block;" src="https://cdn3.iconfinder.com/data/icons/glypho-generic-icons/64/garbage-can-recycle-bin-512.png" alt="delete_img" ></a>
-						</div>
-						{% endfor %}
-					
-				</div>
+			<div class="display-wall">
+				<h4 style="display:inline-block; color:white;">{{msg_count}} Post a message<span style="font-style:italic; color:#00bcd4"> {{request.session.first_name}}</span></h4>					
+				<form action='/the_wall/post_msg', method='post' class="form-group">
+					{% csrf_token %}
+			        <label for="exampleFormControlTextarea1"></label>
+			        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
+					<input type="submit" value="post a message" class='form-control' style='width:200px; margin-top:2px;'>
+				</form>
+		{% for posted_message in all_messages %}
+			<h3 style="color:white">{{posted_message.user.first_name}}-{{posted_message.created_at}}</h3>
+				<p style="color:white;">{{posted_message.message}}</p>
+				{% if request.session.user_id == posted_message.user_id %}
 
-				<div id="post-wall">
-					<h4 style="text-decoration: underline;">Send a Message</h4>
-					<p>You have sent a total of {{totalmessages}} messages so far</p>
-				{% for ms in messages_from %}
-					<form action='/create_message', method='post' class="form-group">
-						{{ ms['first_name'] }}<textarea name="message"></textarea>
-						<input type="hidden" name="recepient_id" value="{{ ms['id'] }}">
-						<input type="submit" name="send" value="send">
+					<form action='/the_wall/delete_comment/{{ posted_message.id }}', method='post' class="form-group">
+						{% csrf_token %}
+						<input type="hidden" name="recepient_id" value="{{ posted_message.id }}">
+						<input type="submit" value="Delete" class='form-control' style='width:200px; margin-top:2px;'>
 					</form>
-				{% endfor %}
-				</div>
+					{% endif %}
+
+				{% for comment in all_comments %}
+					{% if comment.message_id == posted_message.id %}
+						<h5 style="color:white">{{comment.user.first_name}} - {{comment.created_at}}</h5>
+						<p style="color:white">{{comment.comment}}</p>
+						
+						{% endif %}
+					{% endfor %}
+					<form action='/the_wall/post_comment', method='post' class="form-group">
+						{% csrf_token %}
+				            <label for="exampleFormControlTextarea1"></label>
+				            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="comment" style='width: 800px;margin-left:128px;'></textarea>
+							<input type="hidden" name="recepient_id" value="{{ posted_message.id }}">
+							<input type="submit" value="post a comment" class='form-control' style='width:200px; margin-top:2px;'>
+						</form>
+			
+			{% endfor %}
 			</div>
 		</div>
+
+		
 </body>
 </html>
+
